# FileManagerTUI

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
conductor/: patterns.md  product-guidelines.md  product.md  refresh_state.json  tech-stack.md  tracks.md  workflow.md
conductor/archive/clipboard-multiselect_20260227/: learnings.md  plan.md  spec.md
conductor/archive/config-polish_20260228/: implement_state.json  metadata.json  plan.md
conductor/archive/core-loop-tree_20260227/: spec.md
conductor/archive/file-ops-dialogs_20260227/: learnings.md  metadata.json  plan.md
conductor/archive/file-watcher_20260228/: implement_state.json  metadata.json  plan.md  spec.md
conductor/archive/focus-nav-remap_20260228/: plan.md  spec.md
conductor/archive/fuzzy-search_20260228/: metadata.json  plan.md  spec.md
conductor/archive/large-dir-perf_20260228/: learnings.md  plan.md  spec.md
conductor/archive/large-dir-robust_20260301/: implement_state.json
conductor/archive/preview-edit_20260228/: plan.md  spec.md
conductor/archive/preview-panel_20260227/: handoff_20260227_120000.md  learnings.md  (+1 more)
conductor/code_styleguides/: rust.md
scripts/: install.sh
src/: app.rs  config.rs  editor.rs  error.rs  event.rs  handler.rs  main.rs  preview_content.rs  theme.rs  tui.rs  ui.rs
src/components/: dialog.rs  editor.rs  help.rs  mod.rs  preview.rs  search.rs  search_action.rs  status_bar.rs  terminal.rs  tree.rs
src/fs/: clipboard.rs  mod.rs  operations.rs  tree.rs  watcher.rs
src/terminal/: emulator.rs  mod.rs  pty.rs
(+52 files in other folders)
