[package]
name = "file_manager_tui"
version = "0.1.0"
edition = "2021"
description = "A terminal-based file manager TUI built with Rust and Ratatui"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
syntect = "5"
serde_json = "1"
fuzzy-matcher = "0.3"
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
portable-pty = "0.8"
vte = "0.13"
cli-clipboard = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
